--- a/Fiche_Recursivite(2).ipynb
+++ b/Fiche_Recursivite(2).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOlUtGLbbaeRp9quv6HUwP",
+      "authorship_tag": "ABX9TyMpKUUMQC37B5Trqtw69g0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,13 +44,31 @@
         "####Exemple:\n",
         "$$somme(n) = \\left\\lbrace \\matrix{ 0 & \\textrm{si } n=0 \\\\n + somme(n-1) & \\textrm{si } n>0 } \\right. $$\n",
         "\n",
+        "####Arbre d'appel de somme(5):\n",
+        "\n",
+        "    somme(5) = 5 + somme(4)\n",
+        "\n",
+        "            = 5 + 4 + somme(3)\n",
+        "\n",
+        "            = 5 + 4 + 3 + somme(2)\n",
+        "\n",
+        "            = 5 + 4 + 3 + 2 + somme(1)\n",
+        "\n",
+        "            = 5 + 4 + 3 + 2 + 1 + somme(0)\n",
+        "\n",
+        "            = 5 + 4 + 3 + 2 + 1 + 0 = 15\n",
+        "\n",
+        "\n",
         "Une définition récursive comporte toujours:\n",
         "\n",
         "\n",
         "*   Un (ou plusieurs) cas de base\n",
         "*   Un (ou plusieurs) appel récursif (définition par recurence)\n",
         "\n",
-        "###\n"
+        "\n",
+        "\n",
+        "###2) Traduction python\n",
+        "\n"
       ]
     },
     {
@@ -61,10 +79,24 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def somme(n) : \n",
+        "    if n == 0 :\n",
+        "        return 0\n",
+        "    # else\n",
+        "    return n + somme(n-1)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9rPUlVv8VUfu",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
