--- a/Fiche_Recursivite(2).ipynb
+++ b/Fiche_Recursivite(2).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpKUUMQC37B5Trqtw69g0V",
+      "authorship_tag": "ABX9TyO/SDpJh60VyoAq7F314aFF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,8 +95,52 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "##II. Recursivité mutuelle\n",
+        "\n",
+        "Dans certains cas, deux fonction recursives peuvent \"s'appeler entre elles\".\n",
+        "####Exemple:\n",
+        "\n",
+        "$$ a_n =  \\left\\lbrace \\matrix{\n",
+        "     1&\\textrm{si } n=0 \n",
+        "     \\\\ 2 a_{n-1} + 3 b_{n-1}& \\textrm{si } n>0 \n",
+        "     } \\right. $$\n",
+        "\n",
+        "$$ b_n =  \\left\\lbrace \\matrix{\n",
+        "     2 &\\textrm{si } n=0 \n",
+        "     \\\\  a_{n-1} - b_{n-1}& \\textrm{si } n>0 \n",
+        "     } \\right. $$\n",
+        "\n",
+        "On a donc:\n",
+        "\n",
+        "$b_2$ = $a_1$ - $b_1$\n",
+        "\n",
+        "= $2a_0$ + $3b_0$ - ($a_0$ - $b_0$)\n",
+        "\n",
+        "= 2$\\times$1 + 3$\\times$2 - (1 - 2) = 9\n",
+        "\n",
+        "La traduction en python se fait très bien malgré la complexification de l'arbre d'appel à l'execution:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j-2HuE9YbQHb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def a(n):\n",
+        "    if n==0:\n",
+        "        return 1\n",
+        "    return 2*a(n-1)+3*b(n-1)\n",
+        "\n",
+        "def b(n):\n",
+        "    if n==0:\n",
+        "        return 2\n",
+        "    return a(n-1)- b(n-1)"
+      ],
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
