--- a/NSI/Fiche_Recursivite-fini.ipynb
+++ b/NSI/Fiche_Recursivite-fini.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUb+vZ5nRDnlGz5fdtQe2Q",
+      "authorship_tag": "ABX9TyPHBeJ4pKD0+smZRVQssg+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/madelvallez/Cours/blob/master/Fiche_Recursivite(2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/madelvallez/Cours/blob/master/NSI/Fiche_Recursivite-fini.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
         "\n",
         "**Fonction récursive**: fonction qui fait appel à ***elle-même***\n",
         "\n",
-        "La récursivité informatique est particulièrement adapté aux définiitions mathématiques par récurence.\n",
+        "La récursivité informatique est particulièrement adaptée aux définitions mathématiques par récurence.\n",
         "\n",
         "####Exemple:\n",
         "$$somme(n) = \\left\\lbrace \\matrix{ 0 & \\textrm{si } n=0 \\\\n + somme(n-1) & \\textrm{si } n>0 } \\right. $$\n",
@@ -118,7 +118,7 @@
         "\n",
         "= 2$\\times$1 + 3$\\times$2 - (1 - 2) = 9\n",
         "\n",
-        "La traduction en python se fait très bien malgré la complexification de l'arbre d'appel à l'execution:"
+        "La traduction en python se fait très bien malgré la complexification de l'arbre d'appel à l'exécution:"
       ]
     },
     {
@@ -139,7 +139,7 @@
         "        return 2\n",
         "    return a(n-1)- b(n-1)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "La fonction somme(n) definie précédement est definie pour tout n $\\geq$ 1.\n",
         "Cependant rien n'empèche l'utilisateur de demander ```somme(-1)```, or la fonction va alors trourner à l'infini.\n",
         "\n",
-        "On peut donc mettre une assertion en debut de fonction:"
+        "On peut, pour l'eviter, mettre une assertion en début de fonction:"
       ]
     },
     {
@@ -243,7 +243,7 @@
         "    # else\n",
         "    return n + somme(n-1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
       "source": [
         "somme(-1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -290,7 +290,7 @@
       "source": [
         "somme(1.5)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -313,7 +313,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Pour faire propre on peur aussi utiliser une fonction annexe:"
+        "Pour faire propre on peut aussi utiliser une fonction annexe:"
       ]
     },
     {
@@ -345,7 +345,9 @@
       },
       "source": [
         "###2) La recursivité maximale\n",
-        "Python est équipé d'une securité qui renvoue une erreur au bout d'une certaine taille de pile d'appel recursifs:"
+        "Python est équipé d'une securité qui renvoie une erreur au bout d'une certaine longueur de pile d'appel recursifs. \n",
+        "\n",
+        "On peut trouver et modifier cette valeur ainsi:"
       ]
     },
     {
@@ -363,7 +365,7 @@
         "import sys\n",
         "print(sys.getrecursionlimit()  )"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
