--- a/NSI/Fiche_Recursivite-fini.ipynb
+++ b/NSI/Fiche_Recursivite-fini.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyPHBeJ4pKD0+smZRVQssg+k",
       "include_colab_link": true
     },
