--- a/NSI/02_ACTIVITÉ_pb_anniv.ipynb
+++ b/NSI/02_ACTIVITÉ_pb_anniv.ipynb
@@ -69,7 +69,7 @@
         "        t[i] = randint(1,366)\n",
         "    return t\n"
       ],
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -93,9 +93,9 @@
         "def genere_list(n):\n",
         "    ''' retourne un tableau de longeur n, \n",
         "    contenant des entiers choisis aléatoirement entre 1 et 366 inclus'''\n",
-        "    return [randint(1,366) for i in range n]"
+        "    return [randint(1,366) for i in range (n)]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "                return True\n",
         "    return False\n"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -149,12 +149,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4a925b03-6381-450b-c175-aa1b42476d6e"
+        "outputId": "5ca8a0f2-f62d-4b7d-a313-ec57ca62e6cb"
       },
       "source": [
         "detecte_doublon([1,2,3,4,5])"
       ],
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -179,12 +179,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "81516bee-2609-4e9d-9fbf-e05d9fd88f19"
+        "outputId": "d940efaa-736d-44aa-9227-263b04db393e"
       },
       "source": [
         "detecte_doublon([1,1,2,3,4])"
       ],
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 12
         }
       ]
     },
@@ -209,12 +209,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0070d95d-45fa-4592-f814-94726471b1f0"
+        "outputId": "220f3b50-98aa-434e-b61d-e85a1cf6b0e5"
       },
       "source": [
         "detecte_doublon([1,2,3,4,4])"
       ],
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 13
         }
       ]
     },
@@ -239,12 +239,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6397f69e-8b11-42a1-d26e-798c9bc41840"
+        "outputId": "c91cb28c-aa2a-42d1-d745-a82e6f293829"
       },
       "source": [
         "detecte_doublon([1,2,3,4,1])"
       ],
-      "execution_count": 30,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 14
         }
       ]
     },
@@ -281,7 +281,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7ba8ec75-992a-4f1a-8f18-05b94491c568"
+        "outputId": "6ab8ada3-29ed-42b0-a37c-0f42cd5ce683"
       },
       "source": [
         "from time import perf_counter\n",
@@ -292,12 +292,12 @@
         "end = perf_counter()   # fin du chrono\n",
         "print('test effectué en', (end-start)*1000,'ms' )"
       ],
-      "execution_count": 34,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "test effectué en 4.109262999918428 ms\n"
+            "test effectué en 4.203162999999677 ms\n"
           ],
           "name": "stdout"
         }
@@ -331,9 +331,9 @@
         "        t = genere_list(n)\n",
         "        if detecte_doublon(t):\n",
         "            nb_doublons+=1\n",
-        "    return nb_doublons, \" tout les \", taille, \" echantillons\", \"=> \",(nb_doublons/taille)"
+        "    return nb_doublons/taille"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -345,24 +345,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "503150a8-d6c4-485a-ac5c-237ef22655ad"
+        "outputId": "f05f8d99-ff3f-4a83-c525-bf1011d91ea8"
       },
       "source": [
         "evalue_proba(23,1000)"
       ],
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(500, ' tout les ', 1000, ' echantillons', '=> ', 0.5)"
+              "0.483"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 17
         }
       ]
     },
@@ -397,18 +397,20 @@
       },
       "source": [
         "def detecte_doublon_tri(tab):\n",
+        "    global interm\n",
         "    '''t est un tableau d'entiers compris entre 1 et 366\n",
         "\n",
         "    la fonction renvoie True si le tableau t contient deux fois la même valeur, \n",
         "    et False si t ne contient que des valeurs distinctes '''\n",
-        "    t = sorted(tab)\n",
+        "    t = sorted(tab)             #sorted range dans l'ordre croissant les valeurs de la liste\n",
+        "    interm=perf_counter()\n",
         "    for i in range(len(t)-1):\n",
         "        if t[i]==t[i+1]:\n",
         "            return True\n",
         "    return False\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -420,27 +422,27 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d9f7dcff-1ea6-4787-a63c-813f3c6555c6"
+        "outputId": "c21872cd-f12b-4267-b99c-aeb3e3165e12"
       },
       "source": [
-        "from random import shuffle\n",
+        "from random import shuffle      #shuffle melange les valeurs de la liste\n",
         "t = [1,2,3,4]\n",
         "shuffle(t)\n",
         "t"
       ],
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[3, 1, 2, 4]"
+              "[2, 3, 4, 1]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 19
         }
       ]
     },
@@ -449,7 +451,11 @@
       "metadata": {
         "id": "IcQp2_Jrj6qo",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "4dac09da-697d-4b4a-b2a1-f2734e1d6a25"
       },
       "source": [
         "from time import perf_counter\n",
@@ -457,14 +463,25 @@
         "\n",
         "t_test =  [i for i in range(1,367)]\n",
         "shuffle(t_test)\n",
-        "\n",
         "start = perf_counter() #début du chrono\n",
         "detecte_doublon_tri(t_test)\n",
         "end = perf_counter() #fin du chrono\n",
-        "print('test effectué en', (end-start)*1000,'ms' )"
+        "print('test effectué en', (end-start)*1000,'ms' )\n",
+        "print('part 1: ',(interm-start)*1000,'ms')\n",
+        "print('part 2: ',(end-interm)*1000,'ms')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test effectué en 0.12039500006721937 ms\n",
+            "part 1:  0.07703599999331345 ms\n",
+            "part 2:  0.04335900007390592 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
