--- a/ExoLouAnn.ipynb
+++ b/ExoLouAnn.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmFg9InVuQALRsvTv+SRST",
+      "authorship_tag": "ABX9TyNcByHIhuKtObampnn3O59x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "    #else \n",
         "    return x * puissance (x,n-1)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
       "source": [
         "puissance(2,5)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +130,7 @@
         "    #else\n",
         "    return n * fact (n-1)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "source": [
         "fact(3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,8 +267,39 @@
         "colab_type": "text"
       },
       "source": [
-        "### "
+        "### Fonction multiplication\n",
+        "\n",
+        "On va exprimer la multiplication de m par n en utilisant seulement l'addition. \n",
+        "\n",
+        "Ex: multiplication(n,m) avec n=3 et m=4 donne multiplication (3,4)=4+4+4\n",
+        "\n",
+        "Exprime le raisonnement logique de la fonction:\n",
+        "\n",
+        "\n",
+        "*   Cas de base: ... si ...=...\n",
+        "*   Appel récursif: ........ sinon\n",
+        "\n",
+        "\n",
+        "Puis traduit le raisonnement en python:\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lSjslDVYZL6f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def multiplication(n,m):\n",
+        "    if ######### :\n",
+        "        return ###\n",
+        "    #else:\n",
+        "    return ###"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
