--- a/ExoLouAnn.ipynb
+++ b/ExoLouAnn.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcByHIhuKtObampnn3O59x",
+      "authorship_tag": "ABX9TyMFRdGk8J9/MsZwMeCBargm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/madelvallez/Cours/blob/master/ExoLouAnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xbVQTgfSbEoa",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Favorise l'évolution de la fonction puissance, la partie écrite de la multiplication et éventuellement les entiers entre a et b."
       ]
     },
     {
@@ -255,7 +265,7 @@
         "colab": {}
       },
       "source": [
-        "b(2)==9     #ça doit te mettre True"
+        "b(2)==9     #ça doit te mettre True quand t'execute"
       ],
       "execution_count": null,
       "outputs": []
@@ -294,6 +304,52 @@
       "source": [
         "def multiplication(n,m):\n",
         "    if ######### :\n",
+        "        return ###\n",
+        "    #else:\n",
+        "    return ###"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eQ4N7hu0ZuQU",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Reduire le nombre d'appel de la fonction puissance\n",
+        "\n",
+        "**Propriété**\n",
+        "\n",
+        "Si $n = 2 p$ alors $x^n = (x^p)^2$\n",
+        "\n",
+        "Si $n = 2 p + 1$  alors  $x^n = (x^p)^2 \\times x $\n",
+        "\n",
+        "Ceci permet d'écrire une définition avec 2 cas de base et 2 cas récursifs :\n",
+        "\n",
+        "$$puiss(x, n) = \\left\\lbrace \\matrix{\n",
+        "     1 & \\textrm{si } n=0 \n",
+        "     \\\\ x & \\textrm{si } n=1 \n",
+        "     \\\\ carre(puiss(x, n/2)) & \\textrm{si $n$ est pair, } n>1  \n",
+        "     \\\\ x \\times carre(puiss(x, (n-1)/2)) & \\textrm{si $n$ est impair, } n>1  \n",
+        "     } \\right. $$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXgnfrlWZsyx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def puissance_evoluee(x,n):\n",
+        "    if ###:\n",
+        "        return ###\n",
+        "    elif ###:\n",
+        "        return ###\n",
+        "    elif ###:\n",
         "        return ###\n",
         "    #else:\n",
         "    return ###"
