--- a/ExoLouAnn.ipynb
+++ b/ExoLouAnn.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMFRdGk8J9/MsZwMeCBargm",
+      "authorship_tag": "ABX9TyPTS8rQonVr32NLeu3dOSPw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -353,6 +353,19 @@
         "        return ###\n",
         "    #else:\n",
         "    return ###"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SnSM_eypby0A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "puissance_evoluee(2,5)==32"
       ],
       "execution_count": null,
       "outputs": []
