--- a/ExoLouAnn.ipynb
+++ b/ExoLouAnn.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTS8rQonVr32NLeu3dOSPw",
+      "authorship_tag": "ABX9TyNC2SQXqmmgxO+C853d7xbQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xbVQTgfSbEoa",
-        "colab_type": "text"
+        "id": "xbVQTgfSbEoa"
       },
       "source": [
         "# Favorise l'évolution de la fonction puissance, la partie écrite de la multiplication et éventuellement les entiers entre a et b."
@@ -38,8 +37,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PYh66R7bQ1MZ",
-        "colab_type": "text"
+        "id": "PYh66R7bQ1MZ"
       },
       "source": [
         "### Fonction Puissance"
@@ -48,8 +46,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fatclZFvOer2",
-        "colab_type": "text"
+        "id": "fatclZFvOer2"
       },
       "source": [
         "$$puissance(x,n) = \\left\\lbrace \\matrix{ 1 & \\textrm{si } n=0 \\\\x \\times puissance(x,n-1) & \\textrm{sinon }  } \\right. $$\n"
@@ -58,9 +55,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZxTH4SP0OS_E",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ZxTH4SP0OS_E"
       },
       "source": [
         "def puissance(x,n):\n",
@@ -76,7 +71,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Dc7wpB3sOr55",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -105,8 +99,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GTZo2BHhQ7zl",
-        "colab_type": "text"
+        "id": "GTZo2BHhQ7zl"
       },
       "source": [
         "###Fonction factorielle"
@@ -115,8 +108,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OkxC6GMgRjRx",
-        "colab_type": "text"
+        "id": "OkxC6GMgRjRx"
       },
       "source": [
         "$$fact(n) =  \\left\\lbrace \\matrix{\n",
@@ -129,9 +121,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OPO9Oj7qRzfG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OPO9Oj7qRzfG"
       },
       "source": [
         "def fact(n):\n",
@@ -147,7 +137,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "8sA6ZEMIWN_w",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -176,8 +165,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sZybF2xFXpDp",
-        "colab_type": "text"
+        "id": "sZybF2xFXpDp"
       },
       "source": [
         "###Ecrire les entiers entre a et b"
@@ -186,13 +174,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GmUbfxENXwna",
-        "colab_type": "text"
+        "id": "GmUbfxENXwna"
       },
       "source": [
         "$$entier entre(a,b) =  \\left\\lbrace \\matrix{\n",
         "     ecrire.a &\\textrm{si $a$>=$b$ }\n",
-        "     \\\\ ecrire.a.puis.entierentre(a+1,b) & \\textrm{sinon}\n",
+        "     \\\\ ecrire.a--puis.entierentre(a+1,b) & \\textrm{sinon}\n",
         "     } \\right. \n",
         "$$"
       ]
@@ -200,9 +187,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tmQHpmhPYdhD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tmQHpmhPYdhD"
       },
       "source": [
         "def entier_entre(a,b):\n",
@@ -214,8 +199,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "meSnlgJhYqi6",
-        "colab_type": "text"
+        "id": "meSnlgJhYqi6"
       },
       "source": [
         "###Fonctions mutuelles\n",
@@ -225,8 +209,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7vE_QeaGZJEP",
-        "colab_type": "text"
+        "id": "7vE_QeaGZJEP"
       },
       "source": [
         "$$ a_n =  \\left\\lbrace \\matrix{\n",
@@ -243,9 +226,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DkLvl8ujaSpm",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DkLvl8ujaSpm"
       },
       "source": [
         "def a(n):\n",
@@ -260,9 +241,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A_Vb-5fRafU1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "A_Vb-5fRafU1"
       },
       "source": [
         "b(2)==9     #ça doit te mettre True quand t'execute"
@@ -273,8 +252,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9ScDOCObbHiW",
-        "colab_type": "text"
+        "id": "9ScDOCObbHiW"
       },
       "source": [
         "### Fonction multiplication\n",
@@ -297,9 +275,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lSjslDVYZL6f",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lSjslDVYZL6f"
       },
       "source": [
         "def multiplication(n,m):\n",
@@ -314,8 +290,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eQ4N7hu0ZuQU",
-        "colab_type": "text"
+        "id": "eQ4N7hu0ZuQU"
       },
       "source": [
         "###Reduire le nombre d'appel de la fonction puissance\n",
@@ -339,9 +314,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cXgnfrlWZsyx",
-        "colab_type": "code",
-        "colab": {}
+        "id": "cXgnfrlWZsyx"
       },
       "source": [
         "def puissance_evoluee(x,n):\n",
@@ -360,9 +333,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SnSM_eypby0A",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SnSM_eypby0A"
       },
       "source": [
         "puissance_evoluee(2,5)==32"
